# biohub-cell-tracking

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: handoff-2-data-understanding.md  research-log.md
notebooks/: 01_2_dataset_statistics.ipynb  01_dataset_exploration.ipynb  02_visualize_tracks.ipynb  03_baseline_detector.ipynb
scripts/: inspect_zarr.py
src/analysis/: dataset_stats.py  movement_statistics.py
src/common/: types.py
src/data/: dataloader.py  geff_reader.py  zarr_reader.py
src/detector/utils/: peak_detection.py  postprocessing.py  preprocessing.py
